--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ background-color: pink;
 }
 
 #title{
+    text-align: center;
+    color: black;
     display: flex;
     justify-content: center;
     margin-top: 70px;
@@ -112,6 +114,7 @@ li{
     border-radius: 10%;
 
 }
+
     li:nth-child(1){
         left: 25%;
         width:80px;
@@ -120,19 +123,19 @@ li{
     }
     li:nth-child(2){
         left: 10%;
-        width:30px;
-        height: 30px;
+        width:40px;
+        height: 40px;
         animation-delay: 2s;
         animation-duration: 12s;
     } li:nth-child(3){
         left: 70%;
-        width:30px;
-        height: 30px;
+        width:40px;
+        height: 40px;
         animation-delay: 4s;
     } li:nth-child(4){
         left: 40%;
-        width:60px;
-        height: 60px;
+        width:70px;
+        height: 70px;
         animation-delay: 0s;
         animation-duration: 18s;
     } li:nth-child(5){
@@ -140,7 +143,15 @@ li{
         width:30px;
         height: 30px;
         animation-delay: 0s;
-    } li:nth-child(6){
+    } 
+    .sixth{
+        background-image: url(images/heart1.png);
+        
+        background-size: cover;
+        background-position: center;
+    }
+    li:nth-child(6){
+        
         left: 75%;
         width:110px;
         height: 110px;
@@ -151,12 +162,19 @@ li{
         height: 150px;
         animation-delay: 7s;
     } li:nth-child(8){
+        background-image: url(images/heart1.png);
+        background-size: cover;
+        background-position: center;
         left: 50%;
         width:35px;
         height: 35px;
         animation-delay: 15s;
         animation-duration: 45s;
     } li:nth-child(9){
+        
+        background-image: url(images/heart1.png);
+        background-size: cover;
+        background-position: center;
         left: 20%;
         width:25px;
         height: 25px;
@@ -186,3 +204,105 @@ li{
             border-radius: 50%;
         }
     }
+    header{
+        display: none;
+    }
+    .the-listss ul li{
+        position: absolute;
+        display: block;
+        background-image: url(images/pexels-pixabay-417344.jpg)
+        ;
+        background-position: center;
+        background-size: cover;
+        width: 20px;
+        height: 20px;
+        list-style: none;
+        border-radius: 10%;
+    
+    }
+    
+    .the-listss ul li:nth-child(1){
+            left: 25%;
+            width:80px;
+            height: 80px;
+            animation-delay: 10s;
+        }
+        .the-listss ul li:nth-child(2){
+            left: 10%;
+            width:40px;
+            height: 40px;
+            animation-delay: 2s;
+            animation-duration: 12s;
+        }
+        .the-listss ul li:nth-child(3){
+            left: 70%;
+            width:40px;
+            height: 40px;
+            animation-delay: 4s;
+        } 
+        .the-listss ul li:nth-child(4){
+            left: 40%;
+            width:70px;
+            height: 70px;
+            animation-delay: 10s;
+            animation-duration: 18s;
+        }
+        .the-listss ul li:nth-child(5){
+            left: 65%;
+            width:30px;
+            height: 30px;
+            animation-delay: 3s;
+        } 
+
+        .the-listss ul li:nth-child(6){
+            
+            left: 75%;
+            width:110px;
+            height: 110px;
+            animation-delay: 3s;
+        } 
+        .the-listss ul li:nth-child(7){
+            left: 35%;
+            width:80px;
+            height: 80px;
+            animation-delay: 7s;
+        } 
+        .the-listss ul li:nth-child(8){
+            left: 50%;
+            width:35px;
+            height: 35px;
+            animation-delay: 15s;
+            animation-duration: 45s;
+        }
+        .the-listss ul li:nth-child(9){
+            
+            left: 20%;
+            width:25px;
+            height: 25px;
+            animation-delay: 2s;
+            animation-duration:  35s;
+        }
+        .the-listss ul li:nth-child(10){
+            left: 85%;
+            width:50px;
+            height: 50px;
+            animation-delay: 0s;
+            animation-duration:  11s;
+        }
+        .the-listss ul li{
+            
+            top: 10px;
+            animation: animatee 25s linear infinite;
+        }
+        @keyframes animatee{
+            0%{
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+                border-radius: 0;
+            }
+            100%{
+                transform: translateY(-1000px) rotate(720deg);
+                opacity: 0;
+                border-radius: 50%;
+            }
+        }
