--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body{
     margin: auto;
     justify-content: center;
-background-color: pink;
+background-color: #FFCBCB;
     align-items: center;
      background-image: url(images/pexels-james-wheeler-417074.jpg);
        
@@ -144,12 +144,7 @@ li{
         height: 30px;
         animation-delay: 0s;
     } 
-    .sixth{
-        background-image: url(images/heart1.png);
-        
-        background-size: cover;
-        background-position: center;
-    }
+    
     li:nth-child(6){
         
         left: 75%;
@@ -162,9 +157,6 @@ li{
         height: 150px;
         animation-delay: 7s;
     } li:nth-child(8){
-        background-image: url(images/heart1.png);
-        background-size: cover;
-        background-position: center;
         left: 50%;
         width:35px;
         height: 35px;
@@ -172,9 +164,6 @@ li{
         animation-duration: 45s;
     } li:nth-child(9){
         
-        background-image: url(images/heart1.png);
-        background-size: cover;
-        background-position: center;
         left: 20%;
         width:25px;
         height: 25px;
